Archive2/38/a6e51c21d6aa7a/output
main.cpp:43:9: error: expected expression
        ???            
        ^
main.cpp:43:10: error: expected expression
        ???            
         ^
main.cpp:43:11: error: expected expression
        ???            
          ^
main.cpp:44:5: error: expected expression
    };
    ^
main.cpp:44:5: error: expected ':'
    };
    ^
   :
main.cpp:43:11: note: to match this '?'
        ???            
          ^
main.cpp:44:5: error: expected expression
    };
    ^
main.cpp:44:5: error: expected ':'
    };
    ^
   :
main.cpp:43:10: note: to match this '?'
        ???            
         ^
main.cpp:44:5: error: expected expression
    };
    ^
main.cpp:44:5: error: expected ':'
    };
    ^
   :
main.cpp:43:9: note: to match this '?'
        ???            
        ^
main.cpp:44:5: error: expected expression
    };
    ^
main.cpp:36:14: error: initializer contains unexpanded parameter packs '$auto-1-1' and 'rest'
auto print = [](auto closure_list)
             ^
11 errors generated.
